# gpt2-positional-encoding

./: .gitignore  README.md  perplexity.py  pyproject.toml  sample.py  test_drope.py  test_rope.py  train.py  train_drope_example.py
gpt2/: data.py  model.py
